generator client {
  provider = "prisma-client-js"
}

// Auto-generated ERD. Disabled in production via DISABLE_ERD env var because
// the Chromium download (used by Mermaid CLI) bloats Render/Vercel builds.
// docs/ERD.svg is committed to the repo, so prod builds don't need to re-render it.
// Locally: just run `npm run db:erd` and the SVG regenerates.
generator erd {
  provider                  = "prisma-erd-generator"
  output                    = "../docs/ERD.svg"
  theme                     = "forest"
  includeRelationFromFields = "true"
  disabled                  = env("DISABLE_ERD")
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Enums ────────────────────────────────────────────────────────────────────

enum Role {
  ADMIN
  STOREKEEPER
  MANAGER
}

enum DocumentStatus {
  DRAFT
  CONFIRMED
  CANCELLED
}

enum MovementType {
  RECEIPT
  ISSUE
  TRANSFER_OUT
  TRANSFER_IN
  WRITE_OFF
  INVENTORY_ADJUSTMENT
}

// ─── Users & Auth ─────────────────────────────────────────────────────────────

model User {
  id           String   @id @default(cuid())
  name         String
  email        String   @unique
  passwordHash String
  role         Role     @default(STOREKEEPER)
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  receiptDocuments  ReceiptDocument[]
  issueDocuments    IssueDocument[]
  transferDocuments TransferDocument[]
  stockMovements    StockMovement[]
  auditLogs         AuditLog[]
}

// ─── Reference data (справочники) ─────────────────────────────────────────────

model Category {
  id          String    @id @default(cuid())
  name        String    @unique
  description String?
  isActive    Boolean   @default(true)
  products    Product[]
}

model Unit {
  id       String    @id @default(cuid())
  name     String    @unique
  symbol   String    @unique
  isActive Boolean   @default(true)
  products Product[]
}

model Supplier {
  id            String            @id @default(cuid())
  name          String
  contactPerson String?
  phone         String?
  email         String?
  address       String?
  description   String?
  isActive      Boolean           @default(true)
  receipts      ReceiptDocument[]
}

model Warehouse {
  id          String            @id @default(cuid())
  name        String            @unique
  address     String?
  description String?
  isActive    Boolean           @default(true)
  locations   StorageLocation[]

  receiptDocuments   ReceiptDocument[]
  issueDocuments     IssueDocument[]
  transfersFrom      TransferDocument[] @relation("TransferFrom")
  transfersTo        TransferDocument[] @relation("TransferTo")
  stockMovements     StockMovement[]
}

model StorageLocation {
  id          String    @id @default(cuid())
  warehouseId String
  code        String
  name        String
  description String?
  isActive    Boolean   @default(true)
  warehouse   Warehouse @relation(fields: [warehouseId], references: [id])

  receiptItems      ReceiptItem[]
  issueItems        IssueItem[]
  transferItemsFrom TransferItem[] @relation("TransferLocationFrom")
  transferItemsTo   TransferItem[] @relation("TransferLocationTo")
  stockMovements    StockMovement[]

  @@unique([warehouseId, code])
}

model Product {
  id          String   @id @default(cuid())
  name        String
  sku         String   @unique
  barcode     String?
  categoryId  String
  unitId      String
  description String?
  minStock    Decimal  @default(0)
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  category       Category        @relation(fields: [categoryId], references: [id])
  unit           Unit            @relation(fields: [unitId], references: [id])
  receiptItems   ReceiptItem[]
  issueItems     IssueItem[]
  transferItems  TransferItem[]
  stockMovements StockMovement[]
}

// ─── Documents ────────────────────────────────────────────────────────────────

model ReceiptDocument {
  id             String         @id @default(cuid())
  documentNumber String         @unique
  supplierId     String
  warehouseId    String
  date           DateTime
  status         DocumentStatus @default(DRAFT)
  comment        String?
  createdById    String
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  supplier    Supplier        @relation(fields: [supplierId], references: [id])
  warehouse   Warehouse       @relation(fields: [warehouseId], references: [id])
  createdBy   User            @relation(fields: [createdById], references: [id])
  items       ReceiptItem[]
}

model ReceiptItem {
  id                String          @id @default(cuid())
  receiptDocumentId String
  productId         String
  storageLocationId String
  quantity          Decimal
  unitPrice         Decimal?
  comment           String?

  receiptDocument ReceiptDocument @relation(fields: [receiptDocumentId], references: [id], onDelete: Cascade)
  product         Product         @relation(fields: [productId], references: [id])
  storageLocation StorageLocation @relation(fields: [storageLocationId], references: [id])
}

model IssueDocument {
  id             String         @id @default(cuid())
  documentNumber String         @unique
  warehouseId    String
  date           DateTime
  recipientName  String
  status         DocumentStatus @default(DRAFT)
  comment        String?
  createdById    String
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  warehouse   Warehouse   @relation(fields: [warehouseId], references: [id])
  createdBy   User        @relation(fields: [createdById], references: [id])
  items       IssueItem[]
}

model IssueItem {
  id                String        @id @default(cuid())
  issueDocumentId   String
  productId         String
  storageLocationId String
  quantity          Decimal
  comment           String?

  issueDocument   IssueDocument   @relation(fields: [issueDocumentId], references: [id], onDelete: Cascade)
  product         Product         @relation(fields: [productId], references: [id])
  storageLocation StorageLocation @relation(fields: [storageLocationId], references: [id])
}

model TransferDocument {
  id              String         @id @default(cuid())
  documentNumber  String         @unique
  fromWarehouseId String
  toWarehouseId   String
  date            DateTime
  status          DocumentStatus @default(DRAFT)
  comment         String?
  createdById     String
  createdAt       DateTime       @default(now())
  updatedAt       DateTime       @updatedAt

  fromWarehouse Warehouse      @relation("TransferFrom", fields: [fromWarehouseId], references: [id])
  toWarehouse   Warehouse      @relation("TransferTo", fields: [toWarehouseId], references: [id])
  createdBy     User           @relation(fields: [createdById], references: [id])
  items         TransferItem[]
}

model TransferItem {
  id                    String           @id @default(cuid())
  transferDocumentId    String
  productId             String
  fromStorageLocationId String
  toStorageLocationId   String
  quantity              Decimal
  comment               String?

  transferDocument    TransferDocument @relation(fields: [transferDocumentId], references: [id], onDelete: Cascade)
  product             Product          @relation(fields: [productId], references: [id])
  fromStorageLocation StorageLocation  @relation("TransferLocationFrom", fields: [fromStorageLocationId], references: [id])
  toStorageLocation   StorageLocation  @relation("TransferLocationTo", fields: [toStorageLocationId], references: [id])
}

// ─── Stock & Audit ────────────────────────────────────────────────────────────

model StockMovement {
  id                 String       @id @default(cuid())
  productId          String
  warehouseId        String
  storageLocationId  String
  quantityChange     Decimal
  movementType       MovementType
  sourceDocumentType String
  sourceDocumentId   String
  createdById        String
  createdAt          DateTime     @default(now())
  comment            String?

  product         Product         @relation(fields: [productId], references: [id])
  warehouse       Warehouse       @relation(fields: [warehouseId], references: [id])
  storageLocation StorageLocation @relation(fields: [storageLocationId], references: [id])
  createdBy       User            @relation(fields: [createdById], references: [id])

  @@index([productId, warehouseId])
  @@index([sourceDocumentId, sourceDocumentType])
}

model AuditLog {
  id         String   @id @default(cuid())
  userId     String
  action     String
  entityType String
  entityId   String
  oldValue   Json?
  newValue   Json?
  ipAddress  String?
  createdAt  DateTime @default(now())

  user User @relation(fields: [userId], references: [id])

  @@index([entityType, entityId])
  @@index([userId])
}
